--- a/CSS/main2texto.css
+++ b/CSS/main2texto.css
@@ -1,11 +1,12 @@
 p{
-  
+  box-shadow: 2px 5px 2px rgba(8, 91, 146, 0.3) inset; /* Usando box-shadow para sombra, hara 
+que el texto resalte más, los primeros dos valores son el desplazamiento horizontal y vertical,
+el tercer valor es el desenfoque y el cuarto el color de la sombra */
+/*cuando usamos inset la sombra se aplica dentro del elemento*/
 }
 
-img{
- float: left;
-}
-
-img:hover{
-    opacity: 0.5;
+.texto{
+    color: white;
+    text-shadow: 0px 0px 5px black; /*aplicando sombra al texto, los primeros dos valores son el desplazamiento 
+    horizontal y vertical, el tercer valor es el desenfoque y el cuarto el color de la sombra */
 }
